[package]
name = "cheraghtunnel"
version = "1.10.0"
edition = "2021"
authors = ["Antigravity Partner"]

[dependencies]
# Async Runtime
tokio = { version = "1.35.1", features = ["full"] }

# CLI Parser
clap = { version = "4.4.18", features = ["derive"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Web Server & APIs
axum = { version = "0.7.4", features = ["ws", "multipart"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1.0"
mime_guess = "2.0.4"

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }

# System Monitoring
sysinfo = "0.30.5"

# Embedded static files
rust-embed = { version = "8.2.0", features = ["mime-guess"] }

# Multiplexing & Protocols
rand = "0.8.5"   # Random padding/jitter
futures = "0.3.30"
socket2 = { version = "0.5.5", features = ["all"] }
libc = "0.2.152"

# Cryptographic Hashing
sha2 = "0.10"

# TLS & WebSockets
tokio-rustls = "0.25.0"
rustls-pki-types = "1.1.0"
rcgen = "0.12.0"
tokio-tungstenite = "0.21.0"
yamux = "0.10.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
kcp-tokio = "0.7.0"
pnet = "0.35.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
rustls-pemfile = "1.0"
